--- a/admin/views/layouts/default/main.phtml
+++ b/admin/views/layouts/default/main.phtml
@@ -1,5 +1,5 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
-<html xmlns="http://www.w3.org/1999/xhtml">
+<!DOCTYPE html>
+<html>
 
 <head>
 	<meta http-equiv="content-type" content="text/html; charset=utf-8" />
@@ -11,42 +11,41 @@
 </head>
 
 <body class="top_bg">
-<header class="top_ct">
-	<div class="top_logo"><a href="http://www.ksphp.com" title="WebMIS" target="_blank">&nbsp;</a></div>
-	<ul class="nav">
-<?php foreach($Menus as $val){
-	$an = $val['id']==$FID[0]?'nav_an1':'nav_an2';
-	$ico = $val['ico']?'<em class="'.$val['ico'].'"></em>':'';
+	<div class="top_body">
+		<a href="<?php base_url('../');?>" class="top_logo"></a>
+		<ul class="top_nav">
+<?php $MenusLeft =''; foreach ($Menus['Date'] as $val){
+	$an = $val['id']==$Menus['FID']['FID1']?'nav_an1':'nav_an2';
+	if($val['menus']){$MenusLeft = $val['menus'];}
 ?>
-		<li><a href="<?php echo base_url($val['url']);?>" class="<?php echo @$an;?>"><?php echo $ico.$val['title'];?></a></li>
-<?php }?>
-	</ul>
-	<span class="top_link"><?php echo $UserInfo['uname'].'（'.$UserInfo['name'].'）';?>&nbsp;|&nbsp;<a href="<?php echo base_url('index/loginOut');?>"><b>注销</b></a></span>
-</header>
-<section class="ct_body">
-	<aside class="ct_left">
-<?php foreach (@$Menu as $val1) {if(@$val1->menus){?>
-<?php foreach (@$val1->menus as $val2) {
-	$an = $val2->id==$this->Cid?'left_an1':'left_an2'; 
-?>
-		<div class="left_title" onclick="menuTwo('<?php echo $val2->id;?>',$(this))"><em class="<?php echo $val2->ico;?>"></em><?php echo $val2->title;?></div>
-		<ul class="left_list" id="menuThree_<?php echo $val2->id;?>">
-<?php foreach (@$val2->menus as $val2) {
-	$an = $val2->id==$this->Cid?'left_an1':'left_an2'; 
-?>
-			<li><a href="<?php echo base_url($val2->url.'.html');?>" class="<?php echo $an;?>"><em class="<?php echo $val2->ico;?>"></em><?php echo $val2->title;?></a></li>
+			<li><a href="<?php echo base_url($val['url']);?>" class="<?php echo $an;?>"><em class="<?php echo $val['ico'];?>"></em><p><?php echo $val['title'];?></p></a></li>
 <?php }?>
 		</ul>
+		<span class="top_link">
+			<?php echo $UserInfo['uname'];?> [ <a href="">系统配置</a> ] | <a href="<?php echo base_url('index/loginOut');?>"><b>注销</b></a>
+		</span>
+	</div>
+	<div class="ct_body">
+		<div class="ct_left">
+<?php foreach ($MenusLeft as $val1){
+	$ico = $val1['ico']?'<em class="'.$val1['ico'].'"></em>':'';
+?>
+			<div class="left_title"><?php echo $ico.$val1['title'];?></div>
+<?php if($val1['menus']){?>
+			<ul class="left_list">
+<?php foreach ($val1['menus'] as $val2){
+	$ico = $val2['ico']?'<em class="'.$val2['ico'].'"></em>':'';
+	$an = $val['id']==$Menus['FID']['FID3']?'left_an1':'left_an2';
+?>
+				<li><a href="<?php echo base_url($val2['url']);?>" class="<?php echo $an;?>"><?php echo $ico.$val2['title'];?></a></li>
 <?php }?>
+			</ul>
 <?php }}?>
-		<div class="left_copy"><?php echo date('Y');?> &copy; <?php echo $this->config->config['copy'];?></div>
-	</aside>
-	<section class="ct_right">
-
-<?php echo $this->getContent() ?>
-
-	</section>
-</section>
+		</div>
+		<div class="ct_right">
+			<?php echo $this->getContent() ?>
+		</div>
+	</div>
 <div id="base_url" style="display: none;"><?php echo base_url();?></div>
 <div id="IsMobile" style="display: none;"></div>
 <?php echo $this->tag->javascriptInclude("../webmis/plugin/jquery/".JQUERY_NAME);?>
