--- a/admin/views/layouts/default/main.phtml
+++ b/admin/views/layouts/default/main.phtml
@@ -35,7 +35,7 @@
 			<ul class="left_list">
 <?php foreach ($val1['menus'] as $val2){
 	$ico = $val2['ico']?'<em class="'.$val2['ico'].'"></em>':'';
-	$an = $val['id']==$Menus['FID']['FID3']?'left_an1':'left_an2';
+	$an = $val2['id']==$Menus['FID']['FID3']?'left_an1':'left_an2';
 ?>
 				<li><a href="<?php echo base_url($val2['url']);?>" class="<?php echo $an;?>"><?php echo $ico.$val2['title'];?></a></li>
 <?php }?>
