--- a/app_admin/views/layouts/default/main.phtml
+++ b/app_admin/views/layouts/default/main.phtml
@@ -18,17 +18,17 @@
 
 <body class="top_bg">
 	<div class="top_body">
-		<a href="<?php base_url('../');?>" class="top_logo"></a>
+		<a href="<?php $this->inc->BaseUrl('../');?>" class="top_logo"></a>
 		<ul class="top_nav">
 <?php $MenusLeft =''; foreach ($Menus['Date'] as $val){
 	$an = $val['id']==$Menus['FID']['FID1']?'nav_an1':'nav_an2';
 	if($val['menus']){$MenusLeft = $val['menus'];}
 ?>
-			<li><a href="<?php echo base_url($val['url']);?>" class="<?php echo $an;?>"><em class="<?php echo $val['ico'];?>"></em><p><?php echo $val['title'];?></p></a></li>
+			<li><a href="<?php echo $this->inc->BaseUrl($val['url']);?>" class="<?php echo $an;?>"><em class="<?php echo $val['ico'];?>"></em><p><?php echo $val['title'];?></p></a></li>
 <?php }?>
 		</ul>
 		<span class="top_link">
-			<?php echo $UserInfo['uname'];?> [ <a href="">系统配置</a> ] | <a href="<?php echo base_url('index/loginOut');?>"><b>注销</b></a>
+			<?php echo $_SESSION['Admin']['uname'];?> [ <a href=""><?php echo $incLang->_('inc_sysconfig');?></a> ] | <a href="<?php echo $this->inc->BaseUrl('index/loginOut');?>"><b><?php echo $incLang->_('inc_logout');?></b></a>
 		</span>
 	</div>
 	<div class="ct_body">
@@ -43,7 +43,7 @@
 	$ico = $val2['ico']?'<em class="'.$val2['ico'].'"></em>':'';
 	$an = $val2['id']==$Menus['FID']['FID3']?'left_an1':'left_an2';
 ?>
-				<li><a href="<?php echo base_url($val2['url']);?>" class="<?php echo $an;?>"><?php echo $ico.$val2['title'];?></a></li>
+				<li><a href="<?php echo $this->inc->BaseUrl($val2['url']);?>" class="<?php echo $an;?>"><?php echo $ico.$val2['title'];?></a></li>
 <?php }?>
 			</ul>
 <?php }}?>
@@ -52,7 +52,7 @@
 			<?php echo $this->getContent() ?>
 		</div>
 	</div>
-<div id="base_url" style="display: none;"><?php echo base_url();?></div>
+<div id="base_url" style="display: none;"><?php echo $this->inc->BaseUrl();?></div>
 <div id="IsMobile" style="display: none;"></div>
 <?php if(@$LoadJS){ foreach($LoadJS as $val){
 echo $this->tag->javascriptInclude("../themes/admin/js/".$val);
