--- a/app_m/views/index/index.phtml
+++ b/app_m/views/index/index.phtml
@@ -1,9 +1,9 @@
 <div class="in_body">
-	<a href="<?php echo base_url();?>" class="logo">&nbsp;</a>
+	<a href="<?php echo $this->inc->BaseUrl();?>" class="logo">&nbsp;</a>
 	<div>
 		<a href="http://www.ksphp.com/">官方网站</a>&nbsp;|&nbsp;
 		<a href="https://github.com/ksphp/phalcon-webmis">开源项目</a>&nbsp;|&nbsp;
-		<a href="<?php echo base_url('../admin/');?>">管理后台</a>
+		<a href="<?php echo $this->inc->BaseUrl('../admin/');?>">管理后台</a>
 	</div>
 	<div>
 		Copyright © <a href="http://webmis.ksphp.com/admin" id="webmisVersion">ksphp.com</a> All Rights Reserved
