--- a/public/themes/admin/default/main.css
+++ b/public/themes/admin/default/main.css
@@ -18,6 +18,12 @@ input:focus, textarea:focus{box-shadow: 0 0 6px rgba(153, 153, 153, 0.7);}
 .red{color: red;}
 .green{color: green;}
 
+/* Lang */
+.lang_ct{position: absolute; z-index: 10; cursor: pointer; width: 140px; height: 28px; line-height: 28px; background-color: rgba(0,0,0,0.5); color: #FFF; text-align: center; border-radius: 5px; top: 10px; right: 10px;}
+.lang{display: none; position: absolute; width: 140px; background-color: rgba(0,0,0,0.5); border-radius: 5px; padding: 8px 0; border-top: #333 1px solid; border-bottom: #333 1px solid;}
+.lang li a{color: #FFF; text-align: left; padding-left: 10px; display: block;}
+.lang li a:hover{background-color: #6FB737;}
+
 /* login */
 .login_title{font-size: 38px; height: 50px; line-height: 50px; color: #DFE1E8; text-align: center; padding: 15px 0; min-width: 460px;}
 .login_body{overflow: hidden; border-top: #555 1px solid; border-bottom: #555 1px solid; background-color: #3D3D3D; padding: 24px 0;}
