--- a/app_admin/views/system/menus/index.phtml
+++ b/app_admin/views/system/menus/index.phtml
@@ -1,1 +1,37 @@
-<?php echo $Menus['Ctitle'];?>
+<div class="action">
+<?php foreach ($Menus['action'] as $val){?>
+	<a href=""><em class="<?php echo $val['ico'];?>"></em><span><?php echo $val['name'];?></span></a>
+<?php }?>
+</div>
+<table class="table_list">
+	<tr class="title">
+		<td></td>
+		<td>ID</td>
+		<td>FID</td>
+		<td>别名</td>
+		<td>菜单名称</td>
+		<td>URL</td>
+		<td>权限值</td>
+		<td>图标</td>
+		<td>创建时间</td>
+		<td>排序</td>
+		<td>备注</td>
+	</tr>
+	<tbody id="listBG">
+<?php foreach ($Page->items as $val){?>
+	<tr>
+		<td><input type="checkbox" /></td>
+		<td><?php echo $val->id;?></td>
+		<td><?php echo $val->fid;?></td>
+		<td><?php echo $MenusLang->_($val->title);?></td>
+		<td><?php echo $val->title;?></td>
+		<td><?php echo $val->url;?></td>
+		<td><?php echo $val->perm;?></td>
+		<td><?php echo $val->ico;?></td>
+		<td><?php echo $val->ctime;?></td>
+		<td><?php echo $val->sort;?></td>
+		<td><?php echo $val->remark;?></td>
+	</tr>
+<?php }?>
+	</tbody>
+</table>
