--- a/app_admin/views/layouts/default/main.phtml
+++ b/app_admin/views/layouts/default/main.phtml
@@ -43,7 +43,7 @@
 	$ico = $val2['ico']?'<em class="'.$val2['ico'].'"></em>':'';
 	$an = $val2['id']==$Menus['FID']['FID3']?'left_an1':'left_an2';
 ?>
-				<li><a href="<?php echo $this->inc->BaseUrl($val2['url']);?>" class="<?php echo $an;?>"><?php echo $ico.$val2['title'];?></a></li>
+				<li><a href="<?php echo $this->inc->BaseUrl($val2['url']);?>" class="<?php echo $an;?>"><?php echo $ico.'<span>'.$val2['title'].'</span>';?></a></li>
 <?php }?>
 			</ul>
 <?php }}?>
