--- a/app_admin/views/system/menus/index.phtml
+++ b/app_admin/views/system/menus/index.phtml
@@ -1,8 +1,11 @@
-<div class="action">
-<?php foreach ($Menus['action'] as $val){?>
-	<a href=""><em class="<?php echo $val['ico'];?>"></em><span><?php echo $val['name'];?></span></a>
+<span class="action">
+	<span class="title"><?php echo $Menus['Ctitle'];?></span>
+<?php foreach ($Menus['action'] as $val){
+	$url = $val['ico']=='ico-list'?$this->inc->BaseUrl($this->dispatcher->getControllerName()):'';
+?>
+	<a href="<?php echo $url;?>"><em class="<?php echo $val['ico'];?>"></em><span><?php echo $val['name'];?></span></a>
 <?php }?>
-</div>
+</span>
 <table class="table_list">
 	<tr class="title">
 		<td width="20"><a href="#" id="checkboxY"></a><a href="#" id="checkboxN"></a></td>
@@ -35,3 +38,4 @@
 <?php }?>
 	</tbody>
 </table>
+<div class="page"><?php echo $Page->PageHtml;?></div>
