--- a/public/themes/admin/default/main.css
+++ b/public/themes/admin/default/main.css
@@ -1,7 +1,6 @@
 @charset "utf-8";
 /* 初始化 */
 body,div,span,ul,li,table,tr,td,input,a,p,h1,h2,h3,h4,dl{margin: 0; padding: 0;}
-body,textarea{font-family: ROCK,"\5FAE\8F6F\96C5\9ED1",helvetica,arial,sans-serif; font-size: 12px;}
 header,section,footer,aside{display: block;}
 img{border: none;}
 ul{list-style: none;}
@@ -77,11 +76,12 @@ input:focus, textarea:focus{box-shadow: 0 0 6px rgba(153, 153, 153, 0.7);}
 .left_an2:hover em{color: #6FB737;}
 
 /* Action */
-.action{line-height: 32px; display: inline-block; overflow: hidden; border: #DADCDF 1px solid; border-radius: 3px; padding: 0 10px; box-shadow: 1px 1px 2px #EEE;
+.action{line-height: 32px; display: inline-block; overflow: hidden; border: #DADCDF 1px solid; border-radius: 3px; box-shadow: 1px 1px 1px #EEE;
 	background:-moz-linear-gradient(top, #FFF,#F5F5F5);
 	background:-webkit-gradient(linear, 0 0, 0 100%, from(#FFF), to(#F5F5F5));
 	filter:progid:DXImageTransform.Microsoft.gradient(startColorstr=#FFF,endColorstr=#F5F5F5,grandientType=1);
 }
+.action .title{float: left; display: block; border-right: #DADCDF 1px solid; background-color: #FFF; color: #999; padding: 0 10px; box-shadow: 0 1px 0 #DADCDF;}
 .action a{float: left; padding: 0 8px; display: inline-block; overflow: hidden; color: #333;}
 .action a em{float: left; font-size: 14px; position: relative;}
 .action a span{float: left; padding-left: 5px;}
@@ -94,8 +94,13 @@ input:focus, textarea:focus{box-shadow: 0 0 6px rgba(153, 153, 153, 0.7);}
 #checkboxY:before {content: "\e637";}
 #checkboxN:before {content: "\e636";}
 
+/* Page */
+.page{height: 60px; line-height: 60px; text-align: center; color: #999;}
+.page a{border: #DADCDF 1px solid; background-color: #F8F8F8; color: #666; padding: 3px 12px; margin: 0 4px;}
+.page a:hover{border: #6FB737 1px solid; background: #F5FBF4; color: #6FB737;}
+
 /* Table */
-.table_list{width: 100%; border-collapse: collapse; text-align: center; border-top: #6FB737 2px solid; background: #FFF; margin-top: 6px;}
+.table_list{width: 100%; border-collapse: collapse; text-align: center; border-top: #6FB737 2px solid; background: #FFF; margin-top: 5px;}
 .table_list td{border-top: #DADCDF 1px solid; border-bottom: #DADCDF 1px solid; line-height: 20px; padding: 6px 5px;}
 .table_list .title{color: #999; background: #F8F8F8;}
 .table_list .text{padding: 10px 20px; line-height: 24px; background: #F5F5F5; text-align: left;}
