--- a/public/themes/admin/default/main.css
+++ b/public/themes/admin/default/main.css
@@ -81,7 +81,7 @@ input:focus, textarea:focus{box-shadow: 0 0 6px rgba(153, 153, 153, 0.7);}
 	background:-webkit-gradient(linear, 0 0, 0 100%, from(#FFF), to(#F5F5F5));
 	filter:progid:DXImageTransform.Microsoft.gradient(startColorstr=#FFF,endColorstr=#F5F5F5,grandientType=1);
 }
-.action .title{float: left; display: block; border-right: #DADCDF 1px solid; background-color: #FFF; color: #999; padding: 0 10px; box-shadow: 0 1px 0 #DADCDF;}
+.action .title{float: left; display: block; font-weight: bold; border-right: #DADCDF 1px solid; background-color: #FFF; color: #999; padding: 0 10px; box-shadow: 0 1px 0 #DADCDF;}
 .action a{float: left; padding: 0 8px; display: inline-block; overflow: hidden; color: #333;}
 .action a em{float: left; font-size: 14px; position: relative;}
 .action a span{float: left; padding-left: 5px;}
