--- a/app_admin/views/system/menus/index.phtml
+++ b/app_admin/views/system/menus/index.phtml
@@ -26,7 +26,7 @@
 		<td><input type="checkbox" value="<?php echo $val->id;?>" /></td>
 		<td><?php echo $val->id;?></td>
 		<td><?php echo $val->fid;?></td>
-		<td><?php echo $MenusLang->_($val->title);?></td>
+		<td><b><?php echo $MenusLang->_($val->title);?></b></td>
 		<td><?php echo $val->title;?></td>
 		<td><?php echo $val->url;?></td>
 		<td><?php echo $val->perm;?></td>
