Set Default UserName and Password

--- a/app_admin/views/layouts/default/login.phtml
+++ b/app_admin/views/layouts/default/login.phtml
@@ -26,9 +26,9 @@
 		<div class="login_ct">
 			<dl class="login">
 				<dt><?php echo $incLang->_('inc_uname');?>：</dt>
-				<dd><input type="text" id="uname" class="login_input" /></dd>
+				<dd><input type="text" id="uname" class="login_input" value="webmis" /></dd>
 				<dt><?php echo $incLang->_('inc_passwd');?>：</dt>
-				<dd><input type="password" id="passwd" class="login_input" /></dd>
+				<dd><input type="password" id="passwd" class="login_input" value="ksphp.com" /></dd>
 			</dl>
 			<a href="#" id="adminLogin" class="sub"><?php echo $incLang->_('inc_login');?></a>
 		</div>
