--- a/app_admin/views/system/menus/add.phtml
+++ b/app_admin/views/system/menus/add.phtml
@@ -1,7 +1,7 @@
-<form action="<?php echo $this->inc->BaseUrl('SysMenus/addData');?>" method="post" id="Form">
+<form action="<?php echo $this->inc->BaseUrl('SysMenus/Data');?>" method="post" id="Form">
 <table class="table_add">
 	<tr>
-		<td class="width tright"><?php echo $Lang->_('sys_menu_class');?>:</td>
+		<td class="tright" width="90"><?php echo $Lang->_('sys_menu_class');?>:</td>
 		<td>
 			<div id="menusClass">&nbsp;</div>
 			<input type="hidden" id="menus_fid" name="fid" value="0" />
@@ -35,7 +35,7 @@
 foreach($Action as $val){
 	$title = $MLang->_($val->name);
 ?>
-			<input type="checkbox" name="permVal" class="Checkbox" value="<?php echo $val->perm;?>" /><span class="inputText"><?php echo $title;?></span>
+			<input type="checkbox" id="PermVal" class="Checkbox" value="<?php echo $val->perm;?>" /><span class="inputText"><?php echo $title;?></span>
 <?php }?>
 			<input type="hidden" id="menus_perm" name="perm" value="0" />
 		</td>
@@ -55,7 +55,7 @@ foreach($Action as $val){
 	<tr>
 		<td>&nbsp;</td>
 		<td class="sub">
-			<input type="submit" id="Sub" name="Add" value="<?php echo $incLang->_('inc_add');?>" />
+			<input type="submit" id="Sub" value="<?php echo $incLang->_('inc_add');?>" />
 		</td>
 	</tr>
 </table>
