--- a/public/themes/admin/default/main.css
+++ b/public/themes/admin/default/main.css
@@ -12,7 +12,7 @@ input, textarea{box-shadow: 0 1px 1px rgba(0, 0, 0, 0.075) inset;}
 input:focus, textarea:focus{box-shadow: 0 0 6px rgba(153, 153, 153, 0.7);}
 
 /* INC */
-.left{float: left;}.right{float: right;}.tleft{text-align: left;}.tright{text-align: right;}
+.left{float: left;}.right{float: right;}.tleft{text-align: left;}.tright{text-align: right;}.center{text-align: center;}
 .red{color: red;}.green{color: green;}.c1{color: #666;}.c2{color: #999;}
 .input{float: left; height: 30px; line-height: 30px; border: #999 1px solid; background: #FFF; display: inline-block; padding: 0 5px;}
 .inputText{float: left; height: 30px; line-height: 30px; padding: 0 10px 0 5px;}
