--- a/app_admin/views/system/menus/del.phtml
+++ b/app_admin/views/system/menus/del.phtml
@@ -1,4 +1,4 @@
-<form action="<?php echo $this->inc->BaseUrl('SysMenus/Data/delete');?>" method="post" id="Form">
+<form action="<?php echo $this->url->get('SysMenus/Data/delete');?>" method="post" id="Form">
 <table class="table_add">
 	<tr>
 		<td class="center sub">
