--- a/app_admin/views/system/menus/sea.phtml
+++ b/app_admin/views/system/menus/sea.phtml
@@ -1,4 +1,4 @@
-<form action="<?php echo $this->inc->BaseUrl('SysMenus/index');?>" method="get">
+<form action="<?php echo $this->url->get('SysMenus/index');?>" method="get">
 <table class="table_add">
 	<tr>
 		<td class="tright" width="90">FID:</td>
