--- a/app_admin/views/layouts/default/main.phtml
+++ b/app_admin/views/layouts/default/main.phtml
@@ -6,29 +6,29 @@
 	<meta name="author" content="KSPHP" />
 	<?php echo $this->tag->getTitle();?>
 	<link rel="shortcut icon" href="/themes/favicon.ico" type="image/x-icon" />
-	<?php echo $this->tag->stylesheetLink("../webmis/themes/".WEBMIS_THEMES."/webmis.css");?>
-	<?php echo $this->tag->stylesheetLink("../themes/admin/".APP_THEMES."/main.css");?>
-	<?php echo $this->tag->javascriptInclude("../webmis/plugin/jquery/".JQUERY_NAME);?>
-	<?php echo $this->tag->javascriptInclude("../webmis/jquery.webmis.js");?>
-	<?php echo $this->tag->javascriptInclude("../themes/admin/".APP_THEMES."/main.js");?>
+	<?php echo $this->tag->stylesheetLink("/webmis/themes/".WEBMIS_THEMES."/webmis.css");?>
+	<?php echo $this->tag->stylesheetLink("/themes/admin/".APP_THEMES."/main.css");?>
+	<?php echo $this->tag->javascriptInclude("/webmis/plugin/jquery/".JQUERY_NAME);?>
+	<?php echo $this->tag->javascriptInclude("/webmis/jquery.webmis.js");?>
+	<?php echo $this->tag->javascriptInclude("/themes/admin/".APP_THEMES."/main.js");?>
 	<?php if(@$LoadCSS){ foreach($LoadCSS as $val){
-		echo $this->tag->stylesheetLink("../themes/admin/".APP_THEMES."/css/".$val);
+		echo $this->tag->stylesheetLink("/themes/admin/".APP_THEMES."/css/".$val);
 	}}?>
 </head>
 
 <body class="top_bg">
 	<div class="top_body">
-		<a href="<?php $this->inc->BaseUrl('../');?>" class="top_logo"></a>
+		<a href="<?php $this->url->get('../');?>" class="top_logo"></a>
 		<ul class="top_nav">
 <?php $MenusLeft =''; foreach ($Menus['Date'] as $val){
 	$an = $val['id']==$Menus['FID']['FID1']?'nav_an1':'nav_an2';
 	if($val['menus']){$MenusLeft = $val['menus'];}
 ?>
-			<li><a href="<?php echo $this->inc->BaseUrl($val['url']);?>" class="<?php echo $an;?>"><em class="<?php echo $val['ico'];?>"></em><p><?php echo $val['title'];?></p></a></li>
+			<li><a href="<?php echo $this->url->get($val['url']);?>" class="<?php echo $an;?>"><em class="<?php echo $val['ico'];?>"></em><p><?php echo $val['title'];?></p></a></li>
 <?php }?>
 		</ul>
 		<span class="top_link">
-			<?php echo $_SESSION['Admin']['uname'];?> [ <a href="<?php echo $this->inc->BaseUrl('SysConfig');?>"><?php echo $incLang->_('inc_sysconfig');?></a> ] | <a href="<?php echo $this->inc->BaseUrl('index/loginOut');?>"><b><?php echo $incLang->_('inc_logout');?></b></a>
+			<?php echo $_SESSION['Admin']['uname'];?> [ <a href="<?php echo $this->url->get('SysConfig');?>"><?php echo $incLang->_('inc_sysconfig');?></a> ] | <a href="<?php echo $this->url->get('index/loginOut');?>"><b><?php echo $incLang->_('inc_logout');?></b></a>
 		</span>
 	</div>
 	<div class="ct_body">
@@ -43,20 +43,22 @@
 	$ico = $val2['ico']?'<em class="'.$val2['ico'].'"></em>':'';
 	$an = $val2['id']==$Menus['FID']['FID3']?'left_an1':'left_an2';
 ?>
-				<li><a href="<?php echo $this->inc->BaseUrl($val2['url']);?>" class="<?php echo $an;?>"><?php echo $ico.'<span>'.$val2['title'].'</span>';?></a></li>
+				<li><a href="<?php echo $this->url->get($val2['url']);?>" class="<?php echo $an;?>"><?php echo $ico.'<span>'.$val2['title'].'</span>';?></a></li>
 <?php }?>
 			</ul>
 <?php }}?>
 		</div>
 		<div class="ct_right">
-			<?php echo $this->getContent() ?>
+<?php echo $this->getContent() ?>
+
 		</div>
 	</div>
-<div id="base_url" style="display: none;"><?php echo $this->inc->BaseUrl();?></div>
+<div id="base_url" style="display: none;"><?php echo $this->url->get();?></div>
 <div id="IsMobile" style="display: none;"></div>
 <div id="getUrl" style="display: none;"><?php echo @$getUrl;?></div>
+<?php $this->assets->outputJs(); ?>
 <?php if(@$LoadJS){ foreach($LoadJS as $val){
-echo $this->tag->javascriptInclude("../themes/admin/js/".$val);
+echo $this->tag->javascriptInclude("/themes/admin/js/".$val);
 }}?>
 </body>
 </html>
