--- a/app_admin/views/system/db/backup/del.phtml
+++ b/app_admin/views/system/db/backup/del.phtml
@@ -3,7 +3,7 @@
 	<tr>
 		<td class="center sub">
 			<br/><input type="submit" id="Sub" value="<?php echo $incLang->_('inc_delete');?>" />
-			<input type="hidden" id="DelID" name="id" value="" />
+			<input type="hidden" id="DelID" name="table" value="" />
 		</td>
 	</tr>
 </table>
