--- a/app_admin/views/system/db/backup/exp.phtml
+++ b/app_admin/views/system/db/backup/exp.phtml
@@ -19,7 +19,7 @@
 		<td class="tright"><?php echo $Lang->_('sys_db_backup_dir');?>:</td>
 		<td>
 			<select name="dir">
-				<option value="<?php echo @$backdir;?>"><?php echo @$backdir;?></option>
+				<option value="<?php echo APP_BACKUP;?>"><?php echo APP_BACKUP;?></option>
 			</select>
 		</td>
 	</tr>
