--- a/app_admin/views/system/db/restore/index.phtml
+++ b/app_admin/views/system/db/restore/index.phtml
@@ -1,1 +1,8 @@
-<?php print_r($Menus['Ctitle']);?>
+<span class="action">
+	<span class="title"><?php echo $Menus['Ctitle'];?></span>
+<?php foreach ($Menus['action'] as $val){
+	$url = $val['ico']=='ico-list'?$this->url->get($this->dispatcher->getControllerName()):'';
+?>
+	<a href="<?php echo $url;?>" id="<?php echo $val['ico'];?>"><em class="<?php echo $val['ico'];?>"></em><span><?php echo $val['name'];?></span></a>
+<?php }?>
+</span>
