--- a/app_admin/views/system/db/backup/index.phtml
+++ b/app_admin/views/system/db/backup/index.phtml
@@ -6,6 +6,7 @@
 	<a href="<?php echo $url;?>" id="<?php echo $val['ico'];?>"><em class="<?php echo $val['ico'];?>"></em><span><?php echo $val['name'];?></span></a>
 <?php }?>
 </span>
+<!-- Content -->
 <table class="table_list">
 	<tr class="title">
 		<td width="20"><a href="#" id="checkboxY"></a><a href="#" id="checkboxN"></a></td>
@@ -24,3 +25,4 @@
 <?php }?>
 	</tbody>
 </table>
+<!-- Content End -->
