--- a/app_admin/views/system/db/restore/index.phtml
+++ b/app_admin/views/system/db/restore/index.phtml
@@ -17,7 +17,7 @@
 		<td width="30"><?php echo $Lang->_('sys_db_restore_perm');?></td>
 	</tr>
 	<tbody id="listBG">
-	<?php foreach($Files['files'] as $val){?>
+	<?php if(isset($Files['files'])){foreach($Files['files'] as $val){?>
 	<tr>
 		<td><input type="checkbox" value="<?php echo $val['name'];?>" /></td>
 		<td class="tleft"><a href="<?php echo $this->url->get('SysDBRestore/down?file='.$val['name']) ;?>"><?php echo $val['name'];?></a></td>
@@ -26,7 +26,7 @@
 		<td><?php echo $val['mtime'];?></td>
 		<td><?php echo $val['perm'];?></td>
 	</tr>
-	<?php } ?>
+	<?php }} ?>
 	</tbody>
 </table>
 <div class="page">
