--- a/app_admin/views/web/index.phtml
+++ b/app_admin/views/web/index.phtml
@@ -1,1 +1,1 @@
-<?php echo $Menus['Ctitle'];?>
+<iframe src="<?php echo $this->url->get('../');?>" style="width: 100%; height: 100%; border: none;"></iframe>
