--- a/app_admin/views/system/filemanager/index.phtml
+++ b/app_admin/views/system/filemanager/index.phtml
@@ -1,1 +1,56 @@
-<?php print_r($Menus['Ctitle']);?>
+<span class="action">
+	<span class="title"><?php echo $Menus['Ctitle'];?></span>
+<?php foreach ($Menus['action'] as $val){
+	$url = $val['ico']=='ico-list'?$this->url->get($this->dispatcher->getControllerName()):'';
+?>
+	<a href="<?php echo $url;?>" id="<?php echo $val['ico'];?>"><em class="<?php echo $val['ico'];?>"></em><span><?php echo $val['name'];?></span></a>
+<?php }?>
+</span>
+<table class="table_list">
+	<tr>
+		<td colspan="7" align="left" class="c2">
+			<?php echo $Lang->_('sys_file_path');?>：<span id="filePath"><?php echo $filelist['path']; ?></span>
+		</td>
+	</tr>
+	<tr class="title" id="table">
+		<td width="20"><a href="#" id="checkboxY"></a><a href="#" id="checkboxN"></a></td>
+		<td><?php echo $Lang->_('sys_file_name');?></td>
+		<td width="120"><?php echo $Lang->_('sys_file_ctime');?></td>
+		<td width="120"><?php echo $Lang->_('sys_file_mtime');?></td>
+		<td width="80"><?php echo $Lang->_('sys_file_size');?></td>
+		<td width="40"><?php echo $Lang->_('sys_file_perm');?></td>
+		<td width="120"><?php echo $Lang->_('sys_file_action');?></td>
+	</tr>
+	<tbody id="listBG">
+<?php if(@$filelist['folder']){foreach($filelist['folder'] as $val){ ?>
+	<tr>
+		<td><input type="checkbox" value="<?php echo $val['name'];?>" /></td>
+		<td class="tleft" style="font-size: 14px;"><a href="#" onclick="openDir('<?php echo $filelist['path'].$val['name']; ?>');return false;"><em class="ico-folder">&nbsp;</em><?php echo $val['name']; ?></a></td>
+		<td><?php echo $val['ctime']; ?></td>
+		<td><?php echo $val['mtime']; ?></td>
+		<td><?php echo $val['size']; ?></td>
+		<td><a href="#" onclick="editPerm('<?php echo $val['name']; ?>','<?php echo $val['perm']; ?>','<?php echo $Lang->_('sys_file_perm');?>');return false;"><?php echo $val['perm']; ?></a></td>
+		<td><a href="#" onclick="reName('<?php echo $val['name']; ?>','<?php echo $Lang->_('sys_file_rename');?>');return false;"><?php echo $Lang->_('sys_file_rename');?></a></td>
+	</tr>
+<?php }} ?>
+<?php if(@$filelist['files']){foreach($filelist['files'] as $val){ ?>
+	<tr>
+		<td><input type="checkbox" value="<?php echo $val['name'];?>" /></td>
+		<td class="tleft" style="font-size: 14px;"><a href="#" onclick="openFile('<?php echo $filelist['path'].$val['name']; ?>','<?php echo $val['ext']; ?>');return false;"><em class="<?php echo $val['class']; ?>">&nbsp;</em><?php echo $val['name']; ?></a></td>
+		<td><?php echo $val['ctime']; ?></td>
+		<td><?php echo $val['mtime']; ?></td>
+		<td><?php echo $val['size']; ?></td>
+		<td><a href="#" onclick="editPerm('<?php echo $val['name']; ?>','<?php echo $val['perm']; ?>','<?php echo $Lang->_('sys_file_perm');?>');return false;"><?php echo $val['perm']; ?></a></td>
+		<td>
+			<a href="#" onclick="reName('<?php echo $val['name']; ?>','<?php echo $Lang->_('sys_file_rename');?>');return false;"><?php echo $Lang->_('sys_file_rename');?></a> | 
+			<a href="#" onclick="editFile('<?php echo $filelist['path'].$val['name']; ?>','<?php echo $val['ext']; ?>','<?php echo $Lang->_('sys_file_edit');?>','<?php echo $this->Lang;?>');return false;"><?php echo $Lang->_('sys_file_edit');?></a>
+		</td>
+	</tr>
+<?php }} ?>
+	</tbody>
+</table>
+<div class="page">
+	<?php echo $Lang->_('sys_file_folder');?>：<?php echo $filelist['dirNum']; ?>&nbsp;&nbsp;
+	<?php echo $Lang->_('sys_file_file');?>：<?php echo $filelist['fileNum']; ?>&nbsp;&nbsp;
+	<?php echo $Lang->_('sys_file_size');?>：<?php echo $filelist['size']; ?>
+</div>
