--- a/app_admin/views/system/filemanager/index.phtml
+++ b/app_admin/views/system/filemanager/index.phtml
@@ -1,10 +1,6 @@
 <span class="action">
 	<span class="title"><?php echo $Menus['Ctitle'];?></span>
-<?php foreach ($Menus['action'] as $val){
-	$url = $val['ico']=='ico-list'?$this->url->get($this->dispatcher->getControllerName()):'';
-?>
-	<a href="<?php echo $url;?>" id="<?php echo $val['ico'];?>"><em class="<?php echo $val['ico'];?>"></em><span><?php echo $val['name'];?></span></a>
-<?php }?>
+	<a href="#" onclick="backDir('<?php echo dirname($filelist['path']); ?>');return false;"><em class="ico-back"></em><span><?php echo $Lang->_('sys_file_up');?></span></a>
 </span>
 <table class="table_list">
 	<tr>
