--- a/app_admin/views/class/web/index.phtml
+++ b/app_admin/views/class/web/index.phtml
@@ -1,1 +1,39 @@
-<?php print_r($Menus['Ctitle']);?>
+<span class="action">
+	<span class="title"><?php echo $Menus['Ctitle'];?></span>
+<?php foreach ($Menus['action'] as $val){
+	$url = $val['ico']=='ico-list'?$this->url->get($this->dispatcher->getControllerName()):'';
+?>
+	<a href="<?php echo $url;?>" id="<?php echo $val['ico'];?>"><em class="<?php echo $val['ico'];?>"></em><span><?php echo $val['name'];?></span></a>
+<?php }?>
+</span>
+<table class="table_list">
+	<tr class="title" id="class_table">
+		<td width="20"><a href="#" id="checkboxY"></a><a href="#" id="checkboxN"></a></td>
+		<td width="40">ID</td>
+		<td width="40">FID</td>
+		<td width="120"><?php echo $Lang->_('class_web_title');?></td>
+		<td><?php echo $Lang->_('class_web_url');?></td>
+		<td><?php echo $Lang->_('class_web_ico');?></td>
+		<td width="120"><?php echo $Lang->_('class_web_ctime');?></td>
+		<td><?php echo $Lang->_('class_web_remark');?></td>
+		<td width="30"><?php echo $Lang->_('class_web_sort');?></td>
+		<td width="40"><?php echo $Lang->_('class_web_state');?></td>
+	</tr>
+	<tbody id="listBG">
+<?php foreach ($Page->items as $val){?>
+	<tr>
+		<td><input type="checkbox" value="<?php echo $val->id;?>" /></td>
+		<td><?php echo $val->id;?></td>
+		<td><?php echo $this->inc->keyHH($val->fid, @$_GET['fid']);?></td>
+		<td><b><?php echo $this->inc->keyHH($val->title, @$_GET['title']);?></b></td>
+		<td><?php echo $this->inc->keyHH($val->url, @$_GET['url']);?></td>
+		<td><?php echo $this->inc->keyHH($val->ico, @$_GET['ico']);?></td>
+		<td><?php echo $this->inc->keyHH($val->ctime, @$_GET['ctime']);?></td>
+		<td class="tleft"><?php echo $this->inc->keyHH($val->remark, @$_GET['remark']);?></td>
+		<td><?php echo $val->sort;?></td>
+		<td><?php echo $val->state;?></td>
+	</tr>
+<?php } ?>
+	</tbody>
+</table>
+<div class="page"><?php echo $Page->PageHtml;?></div>
