--- a/app_admin/views/class/web/add.phtml
+++ b/app_admin/views/class/web/add.phtml
@@ -1,4 +1,4 @@
-<form action="<?php echo $this->url->get('ClassWeb/Data');?>" method="post" id="Form">
+<form action="<?php echo $this->url->get('ClassWeb/Data/add');?>" method="post" id="Form">
 <table class="table_add">
 	<tr>
 		<td class="width tright"><?php echo $Lang->_('class_web_class');?>:</td>
