--- a/public/themes/admin/default/main.css
+++ b/public/themes/admin/default/main.css
@@ -17,6 +17,7 @@ input:focus, textarea:focus{box-shadow: 0 0 6px rgba(153, 153, 153, 0.7);}
 .input{float: left; height: 30px; line-height: 30px; border: #999 1px solid; background: #FFF; display: inline-block; padding: 0 5px;}
 .inputText{float: left; height: 30px; line-height: 30px; padding: 0 10px 0 5px;}
 .Checkbox{float: left; margin-top: 8px;}
+.noDisplay{display: none;}
 
 /* WebMIS */
 .Validform_checktip{float: left;}
